# hello

./: CMakeLists.txt  README
.github/workflows/: build_and_test.yml
actions/build_and_test_in_container/: Dockerfile  action.yml  entrypoint.sh
lib/hello/: CMakeLists.txt
test/: CMakeLists.txt  test001.cpp
